--- a/index.html
+++ b/index.html
@@ -2,5 +2,33 @@
 <html lang="ja">
     <meta charset="UTL-8">
     <head></head>
-    <body></body>
+    <body>
+        <form id="form">
+            <input type="url" name="url">
+            <button type="submit">submit</button>
+        </form>
+        <script>
+            if ('serviceWorker' in navigator) {
+                // Wait for the 'load' event to not block other work
+                window.addEventListener('load', async () => {
+                // Try to register the service worker.
+                    navigator.serviceWorker.register('./service-worker.js')
+                    .then(function(reg){console.log('Service worker registered! 😎', reg);
+                    }).catch (function(err){
+                        console.log('😥 Service worker registration failed: ', err);
+                    });
+                });
+            }
+
+            let url = localStorage.getItem("url");
+            let form = document.getElementById("form");
+            if(url != undefined)location.replace(url);
+            else{
+                form.addEventListener("submit", event => {
+                    event.preventDefault();
+                    localStorage.setItem("url", form.url.value);
+                });
+            }
+        </script>
+    </body>
 </html>
