--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             let url = localStorage.getItem("url");
             let form = document.getElementById("form");
-            if(url != undefined)location.replace(url);
+            if(url != undefined);
             else{
                 form.addEventListener("submit", event => {
                     event.preventDefault();
